--- a/WPF/Web/Views/CommentsPage.xaml
+++ b/WPF/Web/Views/CommentsPage.xaml
@@ -47,7 +47,7 @@
 
         <Grid Grid.Row="0" Height="465">
             <ScrollViewer Name="scrollViewer" VerticalScrollBarVisibility="Auto">
-                <ItemsControl Name="itemsControlComments" ItemsSource="{Binding _commentDTOs}" Margin="100 20 100 20">
+                <ItemsControl Name="itemsControlComments" ItemsSource="{Binding Comments}" Margin="100 20 100 20">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <local:CommentCard/>
@@ -64,18 +64,20 @@
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
 
-                <WrapPanel Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Left">
+                <WrapPanel Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Left" IsEnabled="{Binding IsPostingEnabled}">
                     <Grid Width="700">
-                        <Label Content="Comment" Style="{StaticResource LabelStyle}" HorizontalAlignment="Left"/>
+                        <Label Content="Your comment" Style="{StaticResource LabelStyle}" HorizontalAlignment="Left"/>
                         <TextBlock Style="{StaticResource TextBlockStyle}" HorizontalAlignment="Right">
                             <Run Text="{Binding ElementName=textBoxComment, Path=Text.Length, Mode=OneWay}"/>
                             <Run Text="/ 256 "/>
                         </TextBlock>
                     </Grid>
-                    <TextBox x:Name="textBoxComment" TextWrapping="Wrap" Width="700" Height="80" Padding="5" HorizontalAlignment="Left" TextChanged="CommentTextChanged" MaxLength="256"/>
+                    <TextBox x:Name="textBoxComment" TextWrapping="Wrap" Width="700" Height="80" Padding="5" MaxLength="256"
+                             Text="{Binding NewComment.Text, Mode=TwoWay}" TextChanged="CommentTextChanged"/>
                 </WrapPanel>
 
-                <Button Grid.Column="1" Margin="10" Height="60" Width="60" Name="buttonPost" HorizontalAlignment="Right" Style="{StaticResource MainButton}" Click="PostCommentClick">
+                <Button Grid.Column="1" Margin="10" Height="60" Width="60" Name="buttonPost" HorizontalAlignment="Right" Style="{StaticResource MainButton}" 
+                        IsEnabled="{Binding IsPostingEnabled}" Click="PostCommentClick">
                     <WrapPanel Orientation="Vertical">
                         <Image Style="{StaticResource ImageStyle}" Source="{StaticResource PlaneIcon}"/>
                         <TextBlock Text="Post" Style="{StaticResource ButtonText}"/>
