--- a/WPF/Android/Views/AddAccomodationPage.xaml
+++ b/WPF/Android/Views/AddAccomodationPage.xaml
@@ -110,9 +110,9 @@
             </TextBox>
 
             <Label Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Location:" FontFamily="{StaticResource Roboto}"
-                     FontSize="18" Margin="0,0,0,5"/>
+                     FontSize="18" Margin="0,5,0,5"/>
 
-            <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="220" HorizontalAlignment="Right">
+            <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="220" HorizontalAlignment="Right" Margin="0,5,0,0">
                 <ComboBox x:Name="comboBox"  Height="40" Text="Choose location" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                       SelectedItem="{Binding SelectedLocationDTO, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ItemsSource="{Binding LocationDTOs}"
                       DisplayMemberPath="LocationOptionTemplate" Background="{StaticResource Green}" IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"
