--- a/WPF/Web/Views/CreateReservationPage.xaml
+++ b/WPF/Web/Views/CreateReservationPage.xaml
@@ -76,7 +76,7 @@
                                    HorizontalAlignment="Center" TextAlignment="Center"/>
 
                         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                            <Button x:Name="buttonLeft" Height="30" Width="30" Margin="0 0 10 0" Background="{StaticResource SoftGreen}" Click="ButtonLeftClick">
+                            <Button x:Name="buttonLeft" Height="30" Width="30" Margin="0 0 10 0" Background="{StaticResource SoftGreen}" Click="ButtonLeftClick" Cursor="Hand">
                                 <WrapPanel>
                                     <Image Source="{StaticResource LeftArrowIcon}" Style="{StaticResource ButtonImage}"/>
                                 </WrapPanel>
@@ -88,7 +88,7 @@
                                 </Border.Background>
                             </Border>
 
-                            <Button x:Name="buttonRight" Height="30" Width="30" Margin="10 0 0 0" Background="{StaticResource SoftGreen}" Click="ButtonRightClick">
+                            <Button x:Name="buttonRight" Height="30" Width="30" Margin="10 0 0 0" Background="{StaticResource SoftGreen}" Click="ButtonRightClick" Cursor="Hand">
                                 <WrapPanel>
                                     <Image Source="{StaticResource RightArrowIcon}" Style="{StaticResource ButtonImage}"/>
                                 </WrapPanel>
