--- a/WPF/Desktop/Views/CreateRequestWindow.xaml
+++ b/WPF/Desktop/Views/CreateRequestWindow.xaml
@@ -117,7 +117,8 @@
                             <TextBox Grid.Column="1"
                                      Margin="10"
                                      FontSize="16"
-                                     Text="{Binding TourRequest.Description}"/>
+                                     Text="{Binding TourRequest.Description}"
+                                     TextWrapping="Wrap"/>
                         </Grid>
                     </Border>
                     <Border Grid.Row="3"
@@ -276,17 +277,18 @@
                                   CanUserAddRows="False"
                                   Grid.Column="0"
                                   Margin="10, 0, 10, 10"
-                                  FontSize="16">
+                                  FontSize="16"
+                                  Background="{StaticResource SoftGreen}">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="Name" 
                                                     Width="*"
-                                                    Binding="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
+                                                    Binding="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <DataGridTextColumn Header="Surname"
                                                     Width="*"
-                                                    Binding="{Binding Surname, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
+                                                    Binding="{Binding Surname, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <DataGridTextColumn Header="Age"
                                                     Width="0.5*"
-                                                    Binding="{Binding Age, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
+                                                    Binding="{Binding Age, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <DataGridTemplateColumn Width="*">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
