--- a/App.xaml
+++ b/App.xaml
@@ -68,8 +68,9 @@
         <BitmapImage x:Key="VerifiedIcon" UriSource="Resources/Images/Icons/verified-icon.png"/>
         <BitmapImage x:Key="PDFDownload" UriSource="Resources/Images/Icons/beige-pdf.png"/>
         <BitmapImage x:Key="BeigeLogo" UriSource="Resources/Images/Logo/beige-logo.png"/>
+        <BitmapImage x:Key="LocationIconWhite" UriSource="Resources/Images/Icons/location-icon-white.png"/>
 
-            <SolidColorBrush x:Key="HardGreen" Color="#12372A"/>
+        <SolidColorBrush x:Key="HardGreen" Color="#12372A"/>
         <SolidColorBrush x:Key="Green" Color="#436850"/>
         <SolidColorBrush x:Key="Green2" Color="#5a8c6a"/>
         <SolidColorBrush x:Key="SoftGreen" Color="#ADBC9F"/>
