--- a/WPF/Desktop/Views/TourReservationWindow.xaml
+++ b/WPF/Desktop/Views/TourReservationWindow.xaml
@@ -3,10 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:converters="clr-namespace:BookingApp.WPF.Utils.Converters"
         mc:Ignorable="d"
         Title="ReservationWindow" Height="768" Width="1366"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
+        <converters:EmptyStringToVisibilityConverter x:Key="VisibilityConverter"/>
         <Style TargetType="TextBlock" x:Key="HighlightedText">
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -90,13 +92,8 @@
                     <Image Source="{StaticResource ScheduledIcon}"
                            Style="{StaticResource Image}"/>
                     <TextBlock Grid.Row="1"
-                               Style="{StaticResource Info}">
-                        <TextBlock.Text>
-                            <MultiBinding StringFormat="{}{0} - {1}">
-                                <Binding Path="SelectedTour.Beggining"/>
-                                <Binding Path="SelectedTour.End"/>
-                            </MultiBinding>
-                        </TextBlock.Text>
+                               Style="{StaticResource Info}"
+                               Text="{Binding SelectedTour.Beggining}">
                     </TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal"
@@ -161,6 +158,7 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
@@ -205,6 +203,36 @@
                                 Grid.RowSpan="2"
                                 Grid.Column="3"
                                 Content="Add"/>
+
+                        <TextBlock Style="{StaticResource SmallText}"
+                                   Text="{Binding ValidationErrors[TouristName], UpdateSourceTrigger=PropertyChanged}"
+                                   Visibility="{Binding ValidationErrors[TouristName], Converter={StaticResource VisibilityConverter}}"
+                                   Foreground="Red"
+                                   Grid.Row="2"
+                                   Grid.Column="0"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   Margin="10, 0, 5, 5"/>
+
+                        <TextBlock Style="{StaticResource SmallText}"
+                                   Text="{Binding ValidationErrors[TouristSurname]}"
+                                   Visibility="{Binding ValidationErrors[TouristSurname], Converter={StaticResource VisibilityConverter}}"
+                                   Foreground="Red"
+                                   Grid.Row="2"
+                                   Grid.Column="1"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   Margin="10, 0, 5, 5"/>
+
+                        <TextBlock Style="{StaticResource SmallText}"
+                                   Text="{Binding ValidationErrors[TouristAge]}"
+                                   Visibility="{Binding ValidationErrors[TouristAge], Converter={StaticResource VisibilityConverter}}"
+                                   Foreground="Red"
+                                   Grid.Row="2"
+                                   Grid.Column="2"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   Margin="10, 0, 5, 5"/>
                     </Grid>
 
                 </Border>
@@ -214,6 +242,7 @@
                         Margin="10, 0, 10, 10">
                     <Grid>
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
@@ -260,6 +289,36 @@
                                 Grid.RowSpan="2"
                                 Grid.Column="3"
                                 Content="Add"/>
+
+                        <TextBlock Style="{StaticResource SmallText}"
+                                   Text="{Binding ValidationErrors[PassengerName]}"
+                                   Visibility="{Binding ValidationErrors[PassengerName], Converter={StaticResource VisibilityConverter}}"
+                                   Foreground="Red"
+                                   Grid.Row="2"
+                                   Grid.Column="0"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   Margin="10, 0, 5, 5"/>
+
+                        <TextBlock Style="{StaticResource SmallText}"
+                                   Text="{Binding ValidationErrors[PassengerSurname]}"
+                                   Visibility="{Binding ValidationErrors[PassengerSurname], Converter={StaticResource VisibilityConverter}}"
+                                   Foreground="Red"
+                                   Grid.Row="2"
+                                   Grid.Column="1"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   Margin="10, 0, 5, 5"/>
+
+                        <TextBlock Style="{StaticResource SmallText}"
+                                   Text="{Binding ValidationErrors[PassengerAge]}"
+                                   Visibility="{Binding ValidationErrors[PassengerAge], Converter={StaticResource VisibilityConverter}}"
+                                   Foreground="Red"
+                                   Grid.Row="2"
+                                   Grid.Column="2"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   Margin="10, 0, 5, 5"/>
                     </Grid>
                 </Border>
 
@@ -311,8 +370,14 @@
                                 Margin="0"
                                 Content="Book"
                                 Padding="20"
-                                Click="ConfirmReservationButton_Click"
-                                IsEnabled="{Binding IsConfirmationButtonEnabled}"/>
+                                Click="ConfirmReservationButton_Click"/>
+                        <TextBlock Style="{StaticResource SmallText}"
+                                   TextWrapping="Wrap"
+                                   Foreground="Red"
+                                   Text="{Binding ValidationErrors[Confirmation]}"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   Margin="5"/>
                     </StackPanel>
                 </Grid>
             </Grid>
