--- a/WPF/Desktop/Views/TourReservationWindow.xaml
+++ b/WPF/Desktop/Views/TourReservationWindow.xaml
@@ -363,7 +363,7 @@
                                 VerticalAlignment="Center"
                                 Margin="0, 10, 10, 10">
                         <TextBlock PreviewMouseLeftButtonDown="UseCouponsLink_Click"
-                                   Text="Use coupons?"
+                                   Text="{Binding VoucherSelection, UpdateSourceTrigger=PropertyChanged}"
                                    FontSize="16"
                                    Cursor="Hand"/>
                         <Button Style="{StaticResource ButtonStyle}"
